Apex working in read me

--- a/ReadMe
+++ b/ReadMe
@@ -5,6 +5,16 @@ Jake Mayo
 Wes Draper
 Steven Zhu
 
+Jakes working Apex
+https://apex.oracle.com/pls/apex/f?p=1456:1:115035081668725::NO:::
+
+Steps:
+1 -> create Department
+2 -> create Person
+3 -> create Project
+
+
+Stevens Apex
 URL to our apex app: https://apex.oracle.com/pls/apex/f?p=52430:1:10378895798932
 
 
